[gd_scene load_steps=8 format=3 uid="uid://bvhny66vw8bs"]

[ext_resource type="Script" path="res://scenes/menu/deckbuilder.gd" id="1_hiyso"]
[ext_resource type="PackedScene" uid="uid://wfg3ofoom22s" path="res://scenes/menu/deck_card_slot.tscn" id="2_ntnpi"]
[ext_resource type="PackedScene" uid="uid://cqnd85rwaunjt" path="res://scenes/misc/main_background.tscn" id="2_w7x6q"]
[ext_resource type="PackedScene" uid="uid://bcr5jfstov5er" path="res://scenes/menu/cheer_box.tscn" id="3_hu4c7"]
[ext_resource type="PackedScene" uid="uid://wmclosx28ofb" path="res://scenes/misc/modal_dialog.tscn" id="4_wbqxh"]
[ext_resource type="PackedScene" uid="uid://d2fspiqdcp0p1" path="res://scenes/game/card_base.tscn" id="5_u0cvo"]
[ext_resource type="PackedScene" uid="uid://3x1tuvhtn1gv" path="res://scenes/menu/filter_options.tscn" id="6_pqu3n"]

[node name="Deckbuilder" type="Node2D"]
script = ExtResource("1_hiyso")

[node name="MainBackground" parent="." instance=ExtResource("2_w7x6q")]
offset_right = 1280.0
offset_bottom = 720.0

[node name="Background" type="ColorRect" parent="."]
visible = false
custom_minimum_size = Vector2(1280, 720)
offset_right = 40.0
offset_bottom = 40.0
color = Color(0, 0.466667, 0.545098, 1)

[node name="ReturnToMenuButton" type="Button" parent="."]
offset_left = 308.0
offset_top = 7.0
offset_right = 503.0
offset_bottom = 60.0
theme_override_font_sizes/font_size = 32
text = "Main Menu"

[node name="FiltersButton" type="Button" parent="."]
offset_left = 340.0
offset_top = 65.0
offset_right = 532.0
offset_bottom = 121.0
theme_override_font_sizes/font_size = 32
text = "Filter"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_left = 469.0
offset_top = 11.0
offset_right = 1263.0
offset_bottom = 117.0
mouse_filter = 2
theme_override_constants/separation = 10
alignment = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Your Decks ("

[node name="YourDecksCount" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "10"

[node name="Label3" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "/10)"

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="DecksOptionButton" type="OptionButton" parent="HBoxContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 18
text_overrun_behavior = 1

[node name="SampleDecksOption" type="OptionButton" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 18
selected = 0
item_count = 1
popup/item_0/text = "Load Sample Decks"

[node name="GridContainer" type="GridContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 20
columns = 2

[node name="LoadDeckButton" type="Button" parent="HBoxContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Load Deck"

[node name="NewDeckButton" type="Button" parent="HBoxContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "New Deck"

[node name="DeleteDeckButton" type="Button" parent="HBoxContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Delete Deck"

[node name="SaveDeckButton" type="Button" parent="HBoxContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Export Deck"

[node name="DeckList" type="VBoxContainer" parent="."]
offset_left = 7.0
offset_top = 10.0
offset_right = 302.0
offset_bottom = 707.0

[node name="DeckName" type="LineEdit" parent="DeckList"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
placeholder_text = "DeckName"
max_length = 20
select_all_on_focus = true

[node name="OshiSlot" parent="DeckList" instance=ExtResource("2_ntnpi")]
layout_mode = 2

[node name="CheerBox" parent="DeckList" instance=ExtResource("3_hu4c7")]
layout_mode = 2

[node name="CardLabels" type="HBoxContainer" parent="DeckList"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 8
alignment = 2

[node name="Label" type="Label" parent="DeckList/CardLabels"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Cards:"

[node name="CardCount" type="Label" parent="DeckList/CardLabels"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "3"
horizontal_alignment = 2

[node name="Label4" type="Label" parent="DeckList/CardLabels"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "/"

[node name="Label3" type="Label" parent="DeckList/CardLabels"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "50"

[node name="ScrollContainer" type="ScrollContainer" parent="DeckList"]
layout_mode = 2
size_flags_vertical = 3

[node name="DeckCards" type="VBoxContainer" parent="DeckList/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DeckCardSlot" parent="DeckList/ScrollContainer/DeckCards" instance=ExtResource("2_ntnpi")]
layout_mode = 2

[node name="SaveFileDialog" type="FileDialog" parent="."]
auto_translate_mode = 1
initial_position = 1
size = Vector2i(800, 400)
use_native_dialog = true

[node name="OpenFileDialog" type="FileDialog" parent="."]
auto_translate_mode = 1
title = "Open a File"
initial_position = 1
size = Vector2i(800, 400)
ok_button_text = "Open"
file_mode = 0
access = 2
use_native_dialog = true

[node name="ModalDialog" parent="." instance=ExtResource("4_wbqxh")]
visible = false
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1

[node name="PanelContainer" type="PanelContainer" parent="."]
offset_left = 340.0
offset_top = 124.0
offset_right = 1229.0
offset_bottom = 713.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_top = 5

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Cards" type="MarginContainer" parent="PanelContainer/MarginContainer/ScrollContainer"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_bottom = 20

[node name="CardGrid" type="GridContainer" parent="PanelContainer/MarginContainer/ScrollContainer/Cards"]
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 5

[node name="BigCard" parent="." instance=ExtResource("5_u0cvo")]
visible = false
position = Vector2(1000, 280)
scale = Vector2(1.5, 1.5)
is_big_card = true

[node name="FilterOptions" parent="." instance=ExtResource("6_pqu3n")]
visible = false

[connection signal="pressed" from="ReturnToMenuButton" to="." method="back_to_main_menu"]
[connection signal="pressed" from="FiltersButton" to="." method="_on_filters_button_pressed"]
[connection signal="item_selected" from="HBoxContainer/VBoxContainer/HBoxContainer2/DecksOptionButton" to="." method="_on_decks_option_button_item_selected"]
[connection signal="item_selected" from="HBoxContainer/VBoxContainer/SampleDecksOption" to="." method="_on_sample_decks_option_item_selected"]
[connection signal="pressed" from="HBoxContainer/GridContainer/LoadDeckButton" to="." method="_on_load_deck_button_pressed"]
[connection signal="pressed" from="HBoxContainer/GridContainer/NewDeckButton" to="." method="_on_new_deck_button_pressed"]
[connection signal="pressed" from="HBoxContainer/GridContainer/DeleteDeckButton" to="." method="_on_delete_deck_button_pressed"]
[connection signal="pressed" from="HBoxContainer/GridContainer/SaveDeckButton" to="." method="_on_save_deck_button_pressed"]
[connection signal="focus_entered" from="DeckList/DeckName" to="." method="_on_deck_name_focus_entered"]
[connection signal="cheer_changed" from="DeckList/CheerBox" to="." method="_on_cheer_box_cheer_changed"]
[connection signal="file_selected" from="SaveFileDialog" to="." method="_on_save_file_dialog_file_selected"]
[connection signal="file_selected" from="OpenFileDialog" to="." method="_on_open_file_dialog_file_selected"]
[connection signal="filter_settings_changed" from="FilterOptions" to="." method="_on_filter_options_filter_settings_changed"]
